--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yauth-kit",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -26,6 +26,7 @@
     "@types/mocha": "^10.0.10",
     "axios": "^1.7.9",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-mock-axios": "^4.8.0",
     "ts-jest": "^29.2.6",
     "tsup": "^8.3.6",
